<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBackground"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/menu_btn_setting"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight=".2"
                    android:src="@drawable/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/setting"
                    android:textColor="@color/white_color"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/setting_title"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:text="Account detail"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="Full name"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/setting_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/setting_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="Email address"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/setting_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/setting_title"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:text="Sync Detail"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="Last synchronize date"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/setting_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/setting_title" />

            <Button
                android:id="@+id/setting_submit"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_radius"
                android:text="SYNC NOW"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/side_menu"
        android:layout_gravity="start"
        android:theme="@style/NavigationViewStyle"
        android:background="@color/colorBackground"
        app:headerLayout="@layout/nav_header_main"
        app:itemTextColor="@color/white_color"
        android:id="@+id/nav_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:alpha=".3"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/profile_icon"
                    android:layout_marginLeft="@dimen/dp_8"/>

                <TextView
                    android:id="@+id/sidemenu_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:id="@+id/loadingSetting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:visibility="gone"
        android:background="@color/half_transfer">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border_loding"
            android:padding="20dp">

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:indeterminateTint="@color/black"
                android:indeterminateTintMode="src_atop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loading_spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>